--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /* google font */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap');
 
-body{
+body {
     font-family: 'Roboto Slab', serif;
 }
 
-header .container{
+header .container {
     background-image: url("./players/banner.webp");
     background-repeat: no-repeat;
     background-size: cover;
@@ -15,10 +15,10 @@ header .container{
     margin: 20px auto;
     padding: 20px 0px;
     border-radius: 10px;
-    
+
 }
 
-header .container > h1{
+header .container>h1 {
     color: white;
     font-size: 50px;
     text-align: center;
@@ -27,7 +27,7 @@ header .container > h1{
     padding: 10px 0px;
 }
 
-.player-section{
+.player-section {
     display: flex;
     gap: 20px;
     padding: 20px;
@@ -38,26 +38,29 @@ header .container > h1{
     border-radius: 10px;
 }
 
-.player-div{
+.player-div {
     width: 90%;
 }
 
-.players{
+.players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
-.card{
-   padding: 20px;
-   text-align: center;
-   background-color: #00ffff4f;
-   border-radius: 10px;
+
+.card {
+    padding: 20px;
+    text-align: center;
+    background-color: #00ffff4f;
+    border-radius: 10px;
 }
-.card img{
+
+.card img {
     height: 150px;
     width: 100%;
 }
-.card button{
+
+.card button {
     width: 100%;
     padding: 10px 5px;
     font-size: 20px;
@@ -69,47 +72,57 @@ header .container > h1{
     cursor: pointer;
 }
 
-.hiring-div{
+.hiring-div {
     padding: 20px;
     border-left: 5px solid;
 }
-.player-list{
+
+.player-list {
     background-color: black;
     padding: 20px;
     border-radius: 10px;
 }
-.player-list h1{
-    text-align: center;
+
+.player-list h1 {
     border-bottom: 5px solid red;
     padding: 5px;
     font-size: 30px;
-    margin: 0px auto;
+    margin: 0px 0px;
+    margin-left: -7px;
     width: 220px;
 }
 
-ol li{
+ol li {
     font-size: 25px;
     margin: 10px 0px;
+    border-bottom: 2px solid;
+    width: 185px;
 }
-.budget-div{
+
+.budget-div {
     background-color: black;
     padding: 20px;
     border-radius: 5px;
 }
-.budget-div h1{
+
+.budget-div h1 {
     font-size: 30px;
     border-bottom: 3px solid red;
     width: 100px;
 }
-.budget-div input, label{
+
+.budget-div input,
+label {
     padding: 10px;
     font-size: 20px;
     width: 100px;
 }
-.budget-div label{
+
+.budget-div label {
     font-size: 25px;
 }
-.budget-div button{
+
+.budget-div button {
     display: block;
     margin: 10px 7px;
     background-color: blue;
@@ -120,35 +133,38 @@ ol li{
     border-radius: 10px;
 }
 
-.budget-div h2 {
+.budget-div h3 {
     font-size: 25px;
 }
 
-.total-cost-div{
+.total-cost-div {
     background-color: black;
     padding: 20px;
     border-radius: 10px;
 }
-.total-cost-div h1{
+
+.total-cost-div h1 {
     font-size: 30px;
     border-bottom: 3px solid red;
     width: 145px;
 }
 
-.total-cost-div input{
+.total-cost-div input {
     padding: 6px;
     margin: 10px 5px;
     width: 100px;
     font-size: 20px;
 }
-.total-cost-div label{
+
+.total-cost-div label {
     font-size: 27px;
 }
-.coach{
-    margin-right: 25px;
+
+.coach {
+    margin-right: 38px;
 }
 
-.total-cost-div button{
+.total-cost-div button {
     display: block;
     margin: 10px 7px;
     background-color: blue;
@@ -159,12 +175,7 @@ ol li{
     border-radius: 10px;
 }
 
-button{
-    font-family: 'Roboto Slab',serif;
+button {
+    font-family: 'Roboto Slab', serif;
     cursor: pointer;
-}
-
-li{
-    border-bottom: 2px solid;
-    width: 185px;
 }
